# VERA

./: .gitignore  .gitmodules  generate_grpc_stubs.sh
alert_api_gateway/: CMakeLists.txt  go.mod
alert_api_gateway/proto/: CMakeLists.txt  alert_api_gateway.pb.go  alert_api_gateway_grpc.pb.go
alert_api_gateway/proto/src/: alert_api_gateway.proto
alert_api_gateway/proto/src/vera/alert/proto/: alert_api_gateway.proto
alert_api_gateway/server/: CMakeLists.txt
alert_api_gateway/server/src/: main.cc
cpp_modules/: .gitignore
cpp_modules/vera-station-alert/: CMakeLists.txt
cpp_modules/vera-station-alert/src/: Alert.cpp  Alert.hpp  AlertScreen.cpp  AlertScreen.hpp  AnalogClock.cpp  AnalogClock.hpp  CMakeLists.txt  FontHelpers.hpp  Fonts.hpp  SDLHelpers.hpp  main.cpp
docs/design-decisions/: 20230720_001_VERA_Dispatcher_Server_Programming_Language.md  20230720_002_VERA_Dispatcher_Server_Blocking_Or_Non_Blocking_API.md  20230912_001_VERA_Dispatcher_Server_GraalVM.md  20230912_002_VERA_Dispatcher_Server_Frontend.md
ex_modules/: .gitignore
ex_modules/vera_server/: .gitignore  mix.exs
ex_modules/vera_server/config/: config.exs  dev.exs  test.exs
ex_modules/vera_server/lib/: vera.ex  vera_web.ex
ex_modules/vera_server/lib/vera/: application.ex
ex_modules/vera_server/lib/vera_web/: endpoint.ex  router.ex
ex_modules/vera_server/test/support/: conn_case.ex
java_modules/: .gitignore  pom.xml
java_modules/common/: pom.xml
java_modules/common/common-domain-base/: pom.xml
java_modules/common/common-domain-primitives/: pom.xml
java_modules/dispatcher/: pom.xml
java_modules/dispatcher/dispatcher-api/: pom.xml
java_modules/dispatcher/dispatcher-app/: .gitignore  package-lock.json  package.json  pom.xml  types.d.ts  vite.config.ts
java_modules/dispatcher/dispatcher-deployment/: pom.xml
java_modules/dispatcher/dispatcher-domain/: pom.xml
java_modules/dispatcher/dispatcher-web/: pom.xml
java_modules/gis/gis-importer/: pom.xml
java_modules/vera-gis-server/: pom.xml
java_modules/vera-security/: pom.xml
java_modules/vera-server/: pom.xml
js_modules/dispatcher/: index.html  manifest.webmanifest
proto/: alert_api_gateway.proto
rust_modules/: Cargo.toml
rust_modules/vera-server/src/domain/: assignment_id.rs  call_id.rs  callsign.rs  coordinate.rs  id_macro.rs  incident_id.rs  mod.rs  resource_id.rs  resource_status.rs  staffing.rs  station_id.rs  timestamped.rs
rust_modules/vera-shared-kernel/: Cargo.toml
rust_modules/vera-shared-kernel/src/: contact.rs
rust_modules/vera-shared-kernel/src/domain/: geo.rs  mod.rs  timestamped.rs
rust_modules/vera-station-alert-client/: Cargo.toml
rust_modules/vera-station-alert-client/src/: display.rs  main.rs  ui.rs
rust_modules/vera-station-alert-client/src/display/: sdl.rs
rust_modules/vera-station-alert-server/: Cargo.toml
rust_modules/vera-station-alert-server/src/: main.rs
rust_modules/vera-station-alert-shared/: Cargo.toml
rust_modules/vera-station-alert-shared/src/: message.rs
ts_modules/vera-dispatcher/: index.html  package-lock.json  package.json  primary.html  secondary.html  tailwind.config.ts
ts_modules/vera-dispatcher/public/: styles.css
ts_modules/vera-dispatcher/src/: coordinate-field.ts  util.ts
ts_modules/vera-dispatcher/src/api/: address.ts  geo.ts  i18n.ts  resource.ts
ts_modules/vera-dispatcher/src/app/: layout.tsx  page.tsx
ts_modules/vera-dispatcher/src/component/: CoordinateField.ts  Icon.ts  MapView.ts  ResourceDashboard.ts
ts_modules/vera-dispatcher/src/components/: MapView.tsx
(+319 files in other folders)
